--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -8,7 +8,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#2DAB6B",
-    "navigationBarTitleText": "姥爷随身记",
+    "navigationBarTitleText": "姥爷随身",
     "navigationBarTextStyle": "white"
   },
   "sitemapLocation": "sitemap.json",
