--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -8,7 +8,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#2DAB6B",
-    "navigationBarTitleText": "姥爷随身",
+    "navigationBarTitleText": "姥爷随身记",
     "navigationBarTextStyle": "white"
   },
   "sitemapLocation": "sitemap.json",
@@ -16,14 +16,15 @@
     "van-button": "@vant/weapp/button/index",
     "van-tabbar": "@vant/weapp/tabbar/index",
     "van-tabbar-item": "@vant/weapp/tabbar-item/index",
-    "my-tabbar": "./components/myTabbar/myTabbar"
+    "my-tabbar": "./components/myTabbar/myTabbar",
+    "van-row": "@vant/weapp/row/index",
+    "van-col": "@vant/weapp/col/index",
+    "van-icon":"@vant/weapp/icon/index"
   },
   "tabBar": {
     "custom": true,
     "list": [{
-        "pagePath": "pages/index/index",
-        "iconPath": "./images/home.png",
-        "text":"首页"
+        "pagePath": "pages/index/index"
       },
       {
         "pagePath": "pages/me/me"
