--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -19,7 +19,8 @@
     "my-tabbar": "./components/myTabbar/myTabbar",
     "van-row": "@vant/weapp/row/index",
     "van-col": "@vant/weapp/col/index",
-    "van-icon":"@vant/weapp/icon/index"
+    "van-icon":"@vant/weapp/icon/index",
+    "van-popup": "@vant/weapp/popup/index"
   },
   "tabBar": {
     "custom": true,
