--- a/project.config.json
+++ b/project.config.json
@@ -12,7 +12,7 @@
     "coverView": true,
     "nodeModules": true,
     "autoAudits": true,
-    "showShadowRootInWxmlPanel": false,
+    "showShadowRootInWxmlPanel": true,
     "scopeDataCheck": false,
     "uglifyFileName": false,
     "checkInvalidKey": true,
