--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,8 +1,6 @@
 {
   "pages": [
-    "pages/index/index",
-    "pages/me/me",
-    "pages/records/records"
+    "pages/index/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -23,18 +21,5 @@
     "van-popup": "@vant/weapp/popup/index",
     "van-calendar": "@vant/weapp/calendar/index",
     "van-field": "@vant/weapp/field/index"
-  },
-  "tabBar": {
-    "custom": true,
-    "list": [{
-        "pagePath": "pages/index/index"
-      },
-      {
-        "pagePath": "pages/me/me"
-      },
-      {
-        "pagePath": "pages/records/records"
-      }
-    ]
   }
 }
